[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/game_loop.gd" type="Script" id=1]
[ext_resource path="res://scenes/hud.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/map.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/wave.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/mini_map.tscn" type="PackedScene" id=6]

[node name="game_loop" type="Node"]

script/script = ExtResource( 1 )

[node name="hud" parent="." instance=ExtResource( 2 )]

editor/display_folded = true

[node name="ability_container" parent="hud/panel"]

editor/display_folded = true

[node name="player" parent="." instance=ExtResource( 3 )]

editor/display_folded = true
transform/pos = Vector2( 2000, -180.354 )

[node name="lightning" parent="player"]

frame = 10

[node name="map" parent="." instance=ExtResource( 4 )]

editor/display_folded = true

[node name="top" parent="map/edge"]

editor/display_folded = true

[node name="portals" parent="map"]

editor/display_folded = true

[node name="wave" parent="." instance=ExtResource( 5 )]

[node name="restart_timer" type="Timer" parent="."]

process/pause_mode = 2
process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[node name="camera" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 7, 7 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
__meta__ = {
"_edit_lock_": true
}

[node name="mini_map" parent="." instance=ExtResource( 6 )]

[connection signal="player_dead" from="." to="hud" method="_on_player_dead"]

[connection signal="player_lvl_up" from="." to="hud/panel/ability_container" method="_player_lvl_up_screen"]

[connection signal="wave_timeout" from="." to="wave" method="_on_wave_timeout"]

[connection signal="wave_timeout" from="hud" to="." method="_on_hud_wave_timeout"]

[connection signal="player_lvl_up" from="hud/panel/ability_container" to="player/ability_node" method="level_up_ability"]

[connection signal="player_alive" from="player" to="." method="_on_player_player_alive"]

[connection signal="player_dead" from="player" to="." method="_on_player_player_dead"]

[connection signal="no_more_portal" from="map" to="." method="_on_map_no_more_portal"]

[connection signal="Dead" from="map/planet" to="." method="_on_planet_Dead"]

[connection signal="planet_hp" from="map/planet" to="hud" method="set_planet_hp"]

[connection signal="planet_max_hp" from="map/planet" to="hud" method="set_planet_max_hp"]

[connection signal="planet_pos_signal" from="map/planet" to="wave" method="_on_planet_planet_pos_signal"]

[connection signal="new_enemy" from="wave" to="mini_map" method="_on_wave_new_enemy"]

[connection signal="number_of_enemies" from="wave" to="hud" method="_on_wave_number_of_enemies"]

[connection signal="wave_done" from="wave" to="." method="_on_wave_wave_done"]

[connection signal="timeout" from="restart_timer" to="." method="_on_restart_timer_timeout"]


[editable path="hud"]
[editable path="player"]
[editable path="map"]
